--- a/online-gym.html
+++ b/online-gym.html
@@ -22,128 +22,149 @@
 </head>
 <body>
     <header>
-        <div class="header">
-            <div class="header-item">
-                <a href="#" class="header-logo"></a>
-                <!--<div class="header-burger">
-                    <button class="burger"></button>
-                </div>-->
-                <nav>
-                    <ul class="header-nav">
-                        <li><a href="#">Мероприятия</a></li>
-                        <li><a href="#">Расписание</a></li>
-                        <li><a href="#">О компании</a></li>
-                    </ul>
-                </nav>
+        <div class="container">
+            <div class="header">
+                <div class="header-item">
+                    <div class="header-logo">
+                        <a href="#" class="logo-image"></a>
+                    </div>
+                    <!--<div class="header-burger">
+                        <button class="burger" onclick="openModal()"></button>
+                    </div>-->
+                    <nav>
+                        <ul class="header-nav">
+                            <li><a href="#">Мероприятия</a></li>
+                            <li><a href="#">Расписание</a></li>
+                            <li><a href="#">О компании</a></li>
+                        </ul>
+                    </nav>
+                    <div class="socials">
+                        <a href="#" class="socials-inst"></a>
+                        <a href="#" class="socials-fb"></a>
+                    </div>
+                </div>
             </div>
-            <ul class="socials">
-                <li class="socials-inst"><a href="#"></a></li>
-                <li class="socials-fb"><a  href="#"></a></li>
-            </ul>
         </div>
     </header>
-    <div class="holder">
-        <div class="banner">
-            <div class="banner-content">
-                <h1 class="banner-title">
-                    онлайн тренировки любой сложности
-                </h1>
-                <h2 class="banner-subtitle">
-                    > 15 тренировок
-                </h2>
-                <p class="banner-text">
-                    в области спортивной физиологии и нутрициологии
-                </p>
-                <a class="banner-link" href="#timetable">узнать подробнее</a>
-                <button class="banner-arrow"><a href="#marathon"></a></button>
-            </div>
-        </div>
-    </div>
     <main>
         <div class="container">
-            <section id="marathon">
+            <div class="banner">
+                <div class="banner-content">
+                    <h1 class="banner-title">
+                        онлайн тренировки любой сложности
+                    </h1>
+                    <h2 class="banner-subtitle">
+                        > 15 тренировок
+                    </h2>
+                    <div class="banner-box">
+                        <p class="banner-text">
+                            в области спортивной физиологии и нутрициологии
+                        </p>
+                        <a class="banner-link" href="#timetable">узнать подробнее</a>
+                    </div>
+                    <button class="banner-arrow"><a href="#marathon"></a></button>
+                </div>
+                <div class="bg">
+                    <div class="bg-gradient-left"></div>
+                    <div class="bg-gradient-right"></div>
+                    <img class="bg-img" src="images/girl.png" alt="girl">
+                </div>
+            </div>
+        </div>
+        <section id="marathon">
+            <div class="container">
                 <div class="menu-events">
                     <h3>Ближайшие события</h3>
                 </div>
                 <div class="events">
                     <div class="events-wrap events-wrap_endurance">
-                        <p class="events-date">29.06 - 4.07</p>
-                        <h4>Марафон выносливости</h4>
-                        <a class="events-link-notv" href="#">учавствовать</a>
-                        <a class="events-link" href="#">марафон</a>
+                        <div class="events-gradient events-gradient_endurance">
+                            <p class="events-date">29.06 - 4.07</p>
+                            <h4>Марафон выносливости</h4>
+                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <p class="events-button" href="#">марафон</p>
+                        </div>
                     </div>
                     <div class="events-wrap events-wrap_trainer">
-                        <p class="events-date">9.07</p>
-                        <h4>Как стать тренером?</h4>
-                        <a class="events-link-notv" href="#">учавствовать</a>
-                        <a class="events-link" href="#">вебинар</a>
+                        <div class="events-gradient events-gradient_trainer">
+                            <p class="events-date">9.07</p>
+                            <h4>Как стать тренером?</h4>
+                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <p class="events-button" href="#">вебинар</p>
+                         </div>
                     </div>
                     <div class="events-wrap events-wrap_yoga">
-                        <p class="events-date">15.07</p>
-                        <h4>Йога, как стиль жизни</h4>
-                        <a class="events-link-notv" href="#">учавствовать</a>
-                        <a class="events-link" href="#">вебинар</a>
-                    </div>
-                </div>
-            </section>
-            <section class="training" id="timetable">
-                <div class="training-header">
-                    <h3>Расписание тренировок</h3>
-                    <p>22 - 28 июня</p>
-                </div>
-                <div class="grid">
-                    <div>
-                        <div><p>22 июня, 10:00</p></div>
-                        <div>
-                            <img class="body" src="" alt="">
-                            <h4>Функциональный тренинг</h4>
-                            <p>Описание</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div><p>24 июня, 10:00</p></div>
-                        <div>
-                            <img class="skulpt" src="#" alt="">
-                            <h4>Body sculpt</h4>
-                            <p>Описание</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div><p>26 июня, 11:00</p></div>
-                        <div>
-                            <img class="dumbbell" src="#" alt="">
-                            <h4>L.A.B.</h4>
-                            <p>Описание</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div><p>23 июня, 10:00</p></div>
-                        <div>
-                            <img class="jump" src="#" alt="">
-                            <h4>Силовой микс</h4>
-                            <p>Упражнения помогут создать красивый рельеф и прийти в спортивную форму.</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div><p>25 июня, 11:00</p></div>
-                        <div>
-                            <img class="heart" src="#" alt="">
-                            <h4>Дыхательные практики</h4>
-                            <p>Описание</p>
-                        </div>
-                    </div>
-                    <div>
-                        <div><p>27 июня, 10:00</p></div>
-                        <div>
-                            <img class="weight" src="#" alt="">
-                            <h4>Комплексная разминка</h4>
-                            <p>Подготовка тела перед физической нагрузкой.</p>
+                        <div class="events-gradient events-gradient_yoga">
+                            <p class="events-date">15.07</p>
+                            <h4>Йога, как стиль жизни</h4>
+                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <p class="events-button" href="#">вебинар</p>
                         </div>
                     </div>
                 </div>
-            </section>
-        </div>
-        <div class="bg">
+            </div>
+        </section>
+        <section id="timetable">
+            <div class="container">
+                <div class="training">
+                    <div class="training-header">
+                        <h3>Расписание тренировок</h3>
+                        <p class="training-header-text">22&nbsp;-&nbsp;28&nbsp;июня</p>
+                    </div>
+                    <div class="training-grid">
+                        <div>
+                            <div><p>22 июня, 10:00</p></div>
+                            <div>
+                                <img class="body" src="" alt="">
+                                <h4>Функциональный тренинг</h4>
+                                <p>Описание</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div><p>24 июня, 10:00</p></div>
+                            <div>
+                                <img class="skulpt" src="#" alt="">
+                                <h4>Body sculpt</h4>
+                                <p>Описание</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div><p>26 июня, 11:00</p></div>
+                            <div>
+                                <img class="dumbbell" src="#" alt="">
+                                <h4>L.A.B.</h4>
+                                <p>Описание</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div><p>23 июня, 10:00</p></div>
+                            <div>
+                                <img class="jump" src="#" alt="">
+                                <h4>Силовой микс</h4>
+                                <p>Упражнения помогут создать красивый рельеф и прийти в спортивную форму.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div><p>25 июня, 11:00</p></div>
+                            <div>
+                                <img class="heart" src="#" alt="">
+                                <h4>Дыхательные практики</h4>
+                                <p>Описание</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div><p>27 июня, 10:00</p></div>
+                            <div>
+                                <img class="weight" src="#" alt="">
+                                <h4>Комплексная разминка</h4>
+                                <p>Подготовка тела перед физической нагрузкой.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="subscription">
             <div>
                 <span></span>
                 <h3>Подпишитесь на рассылку</h3>
@@ -163,7 +184,7 @@
                 <div>
                     <div>
                         <h3>О компании</h3>
-                        <p>Наша компания является одной из немногих, кто предлагает фитнес услуги онлайн! Оставайтесь  с нами и вы сами увидите, что мы проводим не только онлайн-тренировки.</p>
+                        <p>Наша компания является одной из немногих, кто предлагает фитнес услуги онлайн! Оставайтесь с нами и вы сами увидите, что мы проводим не только онлайн-тренировки.</p>
                         <a href="#">Записаться</a>
                     </div>
                     <div></div>
