--- a/online-gym.html
+++ b/online-gym.html
@@ -111,74 +111,61 @@
                         <h3>Расписание тренировок</h3>
                         <p class="training-header-text">22&nbsp;-&nbsp;28&nbsp;июня</p>
                     </div>
-                    <div class="training-grid">
-                        <div>
-                            <div><p>22 июня, 10:00</p></div>
-                            <div>
-                                <img class="body" src="" alt="">
-                                <h4>Функциональный тренинг</h4>
-                                <p>Описание</p>
+                    <div class="grid">
+                        <div class="grid-item">
+                            <p class="grid-data">22 июня, 10:00</p>
+                            <div class="grid-box">
+                                <img class="grid-body" src="images/body.svg" alt="body">
+                                <h5 class="grid-title">Функциональный тренинг</h5>
+                                <p class="grid-description">Тренировки для тела.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><p>24 июня, 10:00</p></div>
-                            <div>
-                                <img class="skulpt" src="#" alt="">
-                                <h4>Body sculpt</h4>
-                                <p>Описание</p>
+                        <div class="grid-item">
+                            <p class="grid-data">24 июня, 10:00</p>
+                            <div class="grid-box">
+                                <img class="grid-skulpt" src="images/bottle.svg" alt="bottle">
+                                <h5 class="grid-title">Body sculpt</h5>
+                                <p class="grid-description">Комплекс силовых упражнений.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><p>26 июня, 11:00</p></div>
-                            <div>
-                                <img class="dumbbell" src="#" alt="">
-                                <h4>L.A.B.</h4>
-                                <p>Описание</p>
+                        <div class="grid-item">
+                            <p class="grid-data">26 июня, 11:00</p>
+                            <div class="grid-box">
+                                <img class="grid-dumbbell" src="images/dumbbell.svg" alt="dumbbell">
+                                <h5 class="grid-title">L.A.B.</h5>
+                                <p class="grid-description">Движения для глубокой проработки мышц ног.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><p>23 июня, 10:00</p></div>
-                            <div>
-                                <img class="jump" src="#" alt="">
-                                <h4>Силовой микс</h4>
-                                <p>Упражнения помогут создать красивый рельеф и прийти в спортивную форму.</p>
+                        <div class="grid-item">
+                            <p class="grid-data">23 июня, 10:00</p>
+                            <div class="grid-box">
+                                <img class="grid-jump" src="images/jump.svg" alt="jump">
+                                <h5 class="grid-title">Силовой микс</h5>
+                                <p class="grid-description">Упражнения помогут создать красивый рельеф и прийти в&nbsp;спортивную форму.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><p>25 июня, 11:00</p></div>
-                            <div>
-                                <img class="heart" src="#" alt="">
-                                <h4>Дыхательные практики</h4>
-                                <p>Описание</p>
+                        <div class="grid-item">
+                            <p class="grid-data">25 июня, 11:00</p>
+                            <div class="grid-box">
+                                <img class="grid-heart" src="images/heart.svg" alt="heart">
+                                <h5 class="grid-title">Дыхательные практики</h5>
+                                <p class="grid-description">Растяжение и укрепление дыхательных мышц.</p>
                             </div>
                         </div>
-                        <div>
-                            <div><p>27 июня, 10:00</p></div>
-                            <div>
-                                <img class="weight" src="#" alt="">
-                                <h4>Комплексная разминка</h4>
-                                <p>Подготовка тела перед физической нагрузкой.</p>
+                        <div class="grid-item">
+                            <p class="grid-data">27 июня, 10:00</p>
+                            <div class="grid-box">
+                                <img class="grid-weight" src="images/weight.svg" alt="weight">
+                                <h5 class="grid-title">Комплексная разминка</h5>
+                                <p class="grid-description">Подготовка тела перед физической нагрузкой.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <div class="subscription">
-            <div>
-                <span></span>
-                <h3>Подпишитесь на рассылку</h3>
-            </div>
-            <div>
-                <form action="">
-                    <input type="email" placeholder="Ваш e-mail" name="" id="">
-                    <input type="button" value="">
-                    <label for="">
-                        <input type="checkbox" name="" id="">Согласен с обработкой <a href="http://">персональных данных</a>
-                    </label>
-                </form>
-            </div>
-        </div>
+        <section>
+        </section>
         <section>
             <div class="containner">
                 <div>
