--- a/online-gym.html
+++ b/online-gym.html
@@ -54,7 +54,7 @@
                         онлайн тренировки любой сложности
                     </h1>
                     <h2 class="banner-subtitle">
-                        > 15 тренировок
+                        &gt; 15 тренировок
                     </h2>
                     <div class="banner-box">
                         <p class="banner-text">
@@ -257,13 +257,26 @@
                  © 2020, Все права защищены
               </div>
               <div class="footer-item">
-                 Сделано в рамках курса учебной платформы <a href="#" class="footer-link">Annblok</a>
+                 Сделано в рамках курса учебной платформы <a href="https://annblok.ru/workshop" class="footer-link">Annblok</a>
               </div>
            </div>
         </div>
-     </footer>
-     <!-- КНОПКА "НАВЕРХ" -->
-     <a href="#headerTop" class="button-up hidden" id="btnUp"></a>
+    </footer>
+    <!-- КНОПКА "НАВЕРХ" -->
+    <a href="#headerTop" class="button-up hidden" id="btnUp"></a>
+    <!-- POP UP -->
+    <div class="popup-bg">
+        <div class="popup">
+            <h4 class="popup-title">Заявка на участие «Марафон выносливости»</h4>
+            <p class="popup-text">Заполните все поля, и&nbsp;мы пришлем информацию в&nbsp;ближайшее время</p>
+            <form class="form-popup">
+                <input type="email" placeholder="Ваш e-mail" required>
+                <input type="tel" placeholder="Ваш номер телефона" required>
+                <button class="form-button" type="submit">отправить</button>
+            </form>
+            <button class="close-popup"></button>
+        </div>
+    </div>
      <script src="main.js"></script>
 </body>
 </html>
