made a mobile version of the site

--- a/online-gym.html
+++ b/online-gym.html
@@ -51,7 +51,7 @@
             <div class="banner">
                 <div class="banner-content">
                     <h1 class="banner-title">
-                        онлайн тренировки любой сложности
+                        онлайн&nbsp;тренировки любой сложности
                     </h1>
                     <h2 class="banner-subtitle">
                         &gt; 15 тренировок
@@ -83,6 +83,7 @@
                             <h4 class="events-title">Марафон выносливости</h4>
                             <a class="events-link-notv" href="#">учавствовать</a>
                             <p class="events-button" href="#">марафон</p>
+                            <a class="events-link-mobile" href="#"></a>
                         </div>
                     </div>
                     <div class="events-wrap events-wrap_trainer">
@@ -91,14 +92,16 @@
                             <h4 class="events-title">Как стать тренером?</h4>
                             <a class="events-link-notv" href="#">учавствовать</a>
                             <p class="events-button" href="#">вебинар</p>
+                            <a class="events-link-mobile" href="#"></a>
                          </div>
                     </div>
                     <div class="events-wrap events-wrap_yoga">
                         <div class="events-gradient events-gradient_yoga">
                             <p class="events-date">15.07</p>
-                            <h4 class="events-title">Йога, как стиль жизни</h4>
+                            <h4 class="events-title">Йога, как стиль&nbsp;жизни</h4>
                             <a class="events-link-notv" href="#">учавствовать</a>
                             <p class="events-button" href="#">вебинар</p>
+                            <a class="events-link-mobile" href="#"></a>
                         </div>
                     </div>
                 </div>
@@ -116,48 +119,60 @@
                             <p class="grid-data">22 июня, 10:00</p>
                             <div class="grid-box">
                                 <img class="grid-body" src="images/body.svg" alt="body">
-                                <h5 class="grid-title">Функциональный тренинг</h5>
-                                <p class="grid-description">Тренировки для тела.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">Функциональный тренинг</h5>
+                                    <p class="grid-description">Тренировки для тела.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <p class="grid-data">24 июня, 10:00</p>
                             <div class="grid-box">
                                 <img class="grid-skulpt" src="images/bottle.svg" alt="bottle">
-                                <h5 class="grid-title">Body sculpt</h5>
-                                <p class="grid-description">Комплекс силовых упражнений.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">Body sculpt</h5>
+                                    <p class="grid-description">Комплекс силовых упражнений.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <p class="grid-data">26 июня, 11:00</p>
                             <div class="grid-box">
                                 <img class="grid-dumbbell" src="images/dumbbell.svg" alt="dumbbell">
-                                <h5 class="grid-title">L.A.B.</h5>
-                                <p class="grid-description">Движения для глубокой проработки мышц ног.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">L.A.B.</h5>
+                                    <p class="grid-description">Движения для глубокой проработки мышц ног.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <p class="grid-data">23 июня, 10:00</p>
                             <div class="grid-box">
                                 <img class="grid-jump" src="images/jump.svg" alt="jump">
-                                <h5 class="grid-title">Силовой микс</h5>
-                                <p class="grid-description">Упражнения помогут создать красивый рельеф и прийти в&nbsp;спортивную форму.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">Силовой микс</h5>
+                                    <p class="grid-description">Упражнения помогут создать красивый рельеф и прийти в&nbsp;спортивную форму.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <p class="grid-data">25 июня, 11:00</p>
                             <div class="grid-box">
                                 <img class="grid-heart" src="images/heart.svg" alt="heart">
-                                <h5 class="grid-title">Дыхательные практики</h5>
-                                <p class="grid-description">Растяжение и укрепление дыхательных мышц.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">Дыхательные практики</h5>
+                                    <p class="grid-description">Растяжение и укрепление дыхательных мышц.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <p class="grid-data">27 июня, 10:00</p>
                             <div class="grid-box">
                                 <img class="grid-weight" src="images/weight.svg" alt="weight">
-                                <h5 class="grid-title">Комплексная разминка</h5>
-                                <p class="grid-description">Подготовка тела перед физической нагрузкой.</p>
+                                <div class="grid-box__text">
+                                    <h5 class="grid-title">Комплексная разминка</h5>
+                                    <p class="grid-description">Подготовка тела перед физической нагрузкой.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -179,57 +194,61 @@
                             <input class="subscribe-checkbox" type="checkbox" id="01">
                             <label class="subscribe-label-text" for="01"><span class="text-opacity">Согласен с обработкой</span><a class="link-opacity" href="#" target="_blank"> персональных данных</a></label>
                         </div>
-                        <!--<input type="submit" name="submit" id="submit-mobile" value="Подписаться" class="subscribe-btn-mobile">-->
+                        <input type="submit" name="submit" id="submit-mobile" value="Подписаться" class="subscribe-btn-mobile">
                     </form>
                 </div>
             </div>
         </section>
         <section class="company">
             <div class="container">
-               <div class="company-content">
-                  <div class="company-wrapper">
-                     <div class="company-wrapper-description">
-                        <h2 class="company-wrapper-title">О компании</h2>
-                        <p class="company-wrapper-text">
-                           Наша компания является одной из немногих, кто предлагает фитнес услуги онлайн! Оставайтесь
-                           с&nbsp;нами
-                           и вы сами увидите, что мы проводим не&nbsp;только онлайн-тренировки.
-                        </p>
-                        <a class="company-wrapper-btn" onclick="openModal()">записаться</a>
-                     </div>
-                     <div class="company-wrapper-img">
+                <div class="company-content">
+                    <div class="company-wrapper">
+                        <div class="company-wrapper-description">
+                            <h2 class="company-wrapper-title">О компании</h2>
+                            <p class="company-wrapper-text">
+                            Наша компания является одной из&nbsp;немногих, кто предлагает фитнес услуги онлайн! Оставайтесь
+                            с&nbsp;нами
+                            и вы сами увидите, что мы проводим не&nbsp;только онлайн-тренировки.
+                            </p>
+                            <a class="company-wrapper-btn" onclick="openModal()">записаться</a>
+                        </div>
+                        <div class="company-wrapper-img">
+                            <img src="images/trainer.png" alt="Тренировка">
+                        </div>
+                    </div>
+                    <div class="company-box">
+                        <div class="company-box-item">
+                            <h5 class="company-box-title">Экономия времени</h5>
+                            <p class="company-box-para">
+                                Не нужно тратить время на&nbsp;дорогу
+                            </p>
+                        </div>
+                        <div class="company-box-item">
+                            <h5 class="company-box-title">Индивидуальный подход</h5>
+                            <p class="company-box-para">
+                                Внимание тренера пренадлежит только вам
+                            </p>
+                        </div>
+                        <div class="company-box-item">
+                            <h5 class="company-box-title">Экономия денег</h5>
+                            <p class="company-box-para">
+                                Средняя цена одной тренировки - 700₽
+                            </p>
+                        </div>
+                        <div class="company-box-item">
+                            <h5 class="company-box-title">Опытный персонал</h5>
+                            <p class="company-box-para">
+                                Стаж работы у наших тренеров от 5 лет
+                            </p>
+                        </div>
+                    </div>
+                    <a class="company-wrapper-btn__mob" onclick="openModal()">записаться</a>
+                    <div class="company-wrapper-img__mob">
                         <img src="images/trainer.png" alt="Тренировка">
-                     </div>
-                  </div>
-                  <div class="company-box">
-                     <div class="company-box-item">
-                        <h5 class="company-box-title">Экономия времени</h5>
-                        <p class="company-box-para">
-                           Не нужно тратить время на дорогу
-                        </p>
-                     </div>
-                     <div class="company-box-item">
-                        <h5 class="company-box-title">Индивидуальный подход</h5>
-                        <p class="company-box-para">
-                           Внимание тренера пренадлежит только вам
-                        </p>
-                     </div>
-                     <div class="company-box-item">
-                        <h5 class="company-box-title">Экономия денег</h5>
-                        <p class="company-box-para">
-                           Средняя цена одной тренировки - 700₽
-                        </p>
-                     </div>
-                     <div class="company-box-item">
-                        <h5 class="company-box-title">Опытный персонал</h5>
-                        <p class="company-box-para">
-                           Стаж работы у наших тренеров от 5 лет
-                        </p>
-                     </div>
-                  </div>
-               </div>
+                    </div>
+                </div>
             </div>
-         </section>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
@@ -247,8 +266,10 @@
                     </nav>
                     <div class="footer-socials">
                         <a href="mailto:info@freefit.com" class="footer-mail">info@freefit.com</a>
-                        <a href="#" class="footer-socials-inst"></a>
-                        <a href="#" class="footer-socials-fb"></a>
+                        <div class="media">
+                            <a href="#" class="footer-socials-inst"></a>
+                            <a href="#" class="footer-socials-fb"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -257,13 +278,13 @@
                  © 2020, Все права защищены
               </div>
               <div class="footer-item">
-                 Сделано в рамках курса учебной платформы <a href="https://annblok.ru/workshop" class="footer-link">Annblok</a>
+                 Сделано в рамках курса учебной платформы&nbsp;<a href="https://annblok.ru/workshop" class="footer-link">Annblok</a>
               </div>
            </div>
         </div>
     </footer>
-    <!-- КНОПКА "НАВЕРХ" -->
-    <a href="#headerTop" class="button-up hidden" id="btnUp"></a>
+    <!-- КНОПКА "НАВЕРХ"
+    <a href="#headerTop" class="button-up hidden" id="btnUp"></a>-->
     <!-- POP UP -->
     <div class="popup-bg">
         <div class="popup">
