--- a/online-gym.html
+++ b/online-gym.html
@@ -62,7 +62,7 @@
                         </p>
                         <a class="banner-link" href="#timetable">узнать подробнее</a>
                     </div>
-                    <button class="banner-arrow" href="#timetable"></button>
+                    <button class="banner-arrow" href="#marathon"></button>
                 </div>
                 <div class="bg">
                     <div class="bg-gradient-left"></div>
@@ -81,7 +81,7 @@
                         <div class="events-gradient events-gradient_endurance">
                             <p class="events-date">29.06 - 4.07</p>
                             <h4 class="events-title">Марафон выносливости</h4>
-                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">марафон</p>
                             <a class="events-link-mobile" href="#"></a>
                         </div>
@@ -90,7 +90,7 @@
                         <div class="events-gradient events-gradient_trainer">
                             <p class="events-date">9.07</p>
                             <h4 class="events-title">Как стать тренером?</h4>
-                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">вебинар</p>
                             <a class="events-link-mobile" href="#"></a>
                          </div>
@@ -99,7 +99,7 @@
                         <div class="events-gradient events-gradient_yoga">
                             <p class="events-date">15.07</p>
                             <h4 class="events-title">Йога, как стиль&nbsp;жизни</h4>
-                            <a class="events-link-notv" href="#">учавствовать</a>
+                            <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">вебинар</p>
                             <a class="events-link-mobile" href="#"></a>
                         </div>
@@ -210,7 +210,7 @@
                             с&nbsp;нами
                             и вы сами увидите, что мы проводим не&nbsp;только онлайн-тренировки.
                             </p>
-                            <a class="company-wrapper-btn" onclick="openModal()">записаться</a>
+                            <a class="company-wrapper-btn open-popup">записаться</a>
                         </div>
                         <div class="company-wrapper-img">
                             <img src="images/trainer.png" alt="Тренировка">
@@ -242,7 +242,7 @@
                             </p>
                         </div>
                     </div>
-                    <a class="company-wrapper-btn__mob" onclick="openModal()">записаться</a>
+                    <a class="company-wrapper-btn__mob">записаться</a>
                     <div class="company-wrapper-img__mob">
                         <img src="images/trainer.png" alt="Тренировка">
                     </div>
@@ -283,8 +283,8 @@
            </div>
         </div>
     </footer>
-    <!-- КНОПКА "НАВЕРХ"
-    <a href="#headerTop" class="button-up hidden" id="btnUp"></a>-->
+    <!-- КНОПКА "НАВЕРХ" -->
+    <a href="#headerTop" class="button-up hidden" id="btnUp"></a>
     <!-- POP UP -->
     <div class="popup-bg">
         <div class="popup">
