--- a/online-gym.html
+++ b/online-gym.html
@@ -83,7 +83,7 @@
                             <h4 class="events-title">Марафон выносливости</h4>
                             <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">марафон</p>
-                            <a class="events-link-mobile" href="#"></a>
+                            <a class="events-link-mobile open-popup" href="#"></a>
                         </div>
                     </div>
                     <div class="events-wrap events-wrap_trainer">
@@ -92,7 +92,7 @@
                             <h4 class="events-title">Как стать тренером?</h4>
                             <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">вебинар</p>
-                            <a class="events-link-mobile" href="#"></a>
+                            <a class="events-link-mobile open-popup" href="#"></a>
                          </div>
                     </div>
                     <div class="events-wrap events-wrap_yoga">
@@ -101,7 +101,7 @@
                             <h4 class="events-title">Йога, как стиль&nbsp;жизни</h4>
                             <a class="events-link-notv open-popup" href="#">участвовать</a>
                             <p class="events-button" href="#">вебинар</p>
-                            <a class="events-link-mobile" href="#"></a>
+                            <a class="events-link-mobile open-popup" href="#"></a>
                         </div>
                     </div>
                 </div>
